# npa-traffic-accident-converter

./: .gitignore  ADDING_NEW_YEAR.md  CHECKS.md  CLAUDE.md  COMPARISON_OLD_NEW.md  LICENSE  README.md  download.sh  export_geo.sh  pyproject.toml
.github/workflows/: deploy-viewer.yml
code_tables/2023/: 3_koudohyou_keisatusyotoukoudo.csv  53_koudohyou_tonnerubangou.csv
code_tables/2024/: 3_koudohyou_keisatusyotoukoudo.csv
code_tables/common/: 9_koudohyou_rosen_kousokujidousya_jidousyasenyou_2024.csv
converter/: __main__.py  cli.py  convert.py  decode.py  merge.py
converter/codes/: __init__.py  common.py  y2019_2021.py  y2022.py  y2023.py  y2024.py
scripts/: check_codebook_diff.py  check_codetable_vs_official.py  check_file_definition.py  check_output_diff.py  check_record_count.py  check_undefined_codes.py  generate_reference.py  run_all_checks.py
tests/: test_validate.py
viewer/: README.md  index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: filters.ts  main.ts  popup.ts  style.css  vite-env.d.ts
